[Document] Update swagger doc with notification API
